add Grade build requirements

--- a/extensions/data-transfer/portability-data-transfer-generic/build.gradle
+++ b/extensions/data-transfer/portability-data-transfer-generic/build.gradle
@@ -36,3 +36,11 @@ jar { from('resources') { include 'META-INF/services/*.*' } }
 
 
 configurePublication(project)
+
+task wrapper(type: Wrapper){
+    gradleVersion = '6.9.2'
+}
+
+task prepareKotlinBuildScriptModel {
+
+}
